# vartype

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/vartype/: mem.h  strerror.h  strresult.h  var.h  vartype.h  vrt.h  vrt_mem.h  vrt_offset.h  vrt_result.h  vrt_size.h
src/: main.c  mem.c  set.cmake.h  var.c  vartype.c  vrt.c  vrt_mem.c  vrt_offset.c  vrt_result.c  vrt_size.c
test/: CMakeLists.txt  example.c  mem.c  memoryManager.c  nameRegister.c  vrt_mem.c  vrt_offset.c  vrt_size.c
